--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -21,7 +21,7 @@ jobs:
           deno-version: v1.x
       # The third step is a Flat Action step. We fetch the data in the http_url and save it as downloaded_filename
       - name: Fetch data 
-        uses: githubocto/flat@mr/node20
+        uses: githubocto/flat@v3
         with:
           http_url: ${{ secrets.API_ENDPOINT }} # The data to fetch
           mask: true
